--- a/week1/velog.css
+++ b/week1/velog.css
@@ -25,6 +25,7 @@ html, body {
     height:100%;
     width:85%;
     margin: 0 auto;
+    background-color: #F8F9FA;
 }
 
 
@@ -43,7 +44,7 @@ header{
     justify-content: flex-start;
     align-items: center;
     width:100%;
-    height: 5rem;
+    height: 12.5%;
     font-weight: bold;
 }
 
@@ -53,6 +54,11 @@ header{
 }
 
 .header_menu{
+    display:flex;
+    align-items: center;
+}
+
+.search_icon{
     display:flex;
     align-items: center;
 }
@@ -87,6 +93,44 @@ header{
 
 nav{
     display:flex;
+    align-items: center;
     width:100%;
+    height: 12.5%;
 }
 
+.nav_left-menu{
+    display:flex;
+    align-items: center;
+    flex-grow: 2;
+}
+
+.nav_button{
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    width:7rem;
+
+}
+
+.nav_trending_topic{
+    font-weight: bold;
+    border-bottom: 0.17rem solid black;
+    padding: 0 0.8rem;
+}
+
+.nav_new_topic{
+    font-weight: bold;
+    color: gray;
+    margin: 0 0.5rem;
+    padding: 0 1.3rem;
+}
+
+.period_setting{
+    display: flex;
+    align-items: center;
+    width: 6rem;
+    padding: 0 0.5rem;
+    color: gray;
+    margin-left: 1rem;
+    background-color: #fff;
+}
