--- a/week1/velog.css
+++ b/week1/velog.css
@@ -140,22 +140,22 @@ section{
     display: flex;
     justify-content: space-between;
     flex-wrap:wrap;
-    margin-top:1.5rem;
+    margin-top:1rem;
 }
 
 .article_card{
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    width:17.6rem;
+    width:23%;
     height:21rem;
-    margin-bottom:1.8rem;
+    margin-bottom:2.5%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius:0.3rem;
 }
 
 .article_card:hover{
-    transition: all 1s;
+    transition: all 0.5s;
     transform: translateY(-3%);
 }
 
@@ -172,7 +172,7 @@ section{
 }
 
 .article_title{
-    font-size:1.5rem;
+    font-size:1.2rem;
     font-weight:bold;
 }
 
@@ -218,4 +218,53 @@ section{
 
 .publisher_name{
     font-weight: bold;
+}
+
+@media (max-width:1600px){
+    .article_card{
+        width:30%;
+        margin-bottom:5%;
+    }
+}
+
+@media (max-width:1200px){
+
+    .article_card{
+        width:48%;
+        margin-bottom:4%;
+    }
+}
+
+@media (max-width:1024px){
+
+    body{
+        width:100%;
+    }
+
+    .article_card{
+        width:48%;
+        margin-bottom:4%;
+    }
+}
+
+@media (max-width:600px){
+
+    body{
+        width:100%;
+    }
+
+    .article_card{
+        width:100%;
+        margin-bottom:5%;
+    }
+
+    .thumbnail_container{
+        height:55%;
+        object-fit:cover;
+    }
+
+    .content_container{
+        height:35%;
+    }
+    
 }
