--- a/week1/velog.css
+++ b/week1/velog.css
@@ -42,7 +42,7 @@ a {
 
 header{
     display:flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width:100%;
     height: 5rem;
@@ -94,6 +94,7 @@ header{
 
 nav{
     display:flex;
+    justify-content: space-between;
     align-items: center;
     width:100%;
     height: 3rem;
