--- a/week2/velog/velog.css
+++ b/week2/velog/velog.css
@@ -29,7 +29,6 @@ html, body {
     background-color: #F8F9FA;
 }
 
-
 button {
     background:none;
     border:0;
@@ -185,6 +184,7 @@ section{
     margin-bottom:2.5%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius:0.3rem;
+    cursor: pointer;
 }
 
 .article__card:hover{
@@ -252,6 +252,32 @@ section{
 
 .publisher__name{
     font-weight: bold;
+}
+
+.modal-card{
+    position:fixed;
+    width:30rem;
+    height:30rem;
+    top: 25%;
+    left: 25%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    height:21rem;
+    margin-bottom:2.5%;
+    border-radius:0.3rem;
+}
+.modal-wrapper {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    background-color: rgba(0,0,0,.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width:1600px){
