feat : 캐러셀 슬라이드 기능구현, 심화과제 완성 및 주석표기

--- a/week1/velog.css
+++ b/week1/velog.css
@@ -137,10 +137,10 @@ nav{
     background-color: #fff;
 }
 
-section{
+section > .card-section{
     display: flex;
     justify-content: space-between;
-    flex-wrap:wrap;
+    flex-wrap:nowrap;
     margin-top:1rem;
 }
 
